--- a/wwwroot/sass/main.scss
+++ b/wwwroot/sass/main.scss
@@ -80,17 +80,17 @@
 		color: inherit;
 	}
 
-	input::-moz-focus-inner {
+/*	input::-moz-focus-inner {
 		border: 0;
 		padding: 0;
-	}
+	}*/
 
-	input, select, textarea {
+	/*input, select, textarea {
 		-moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-	}
+	}*/
 
 /* Basic */
 
@@ -795,4 +795,16 @@
 				}
 			}
 
+	}
+
+	.div-box {
+		padding: 15px 0;
+
+		label {
+			display: block;
+		}
+
+		a {
+			display: block;
+		}
 	}
